data gathering, mostly done.

--- a/references.bib
+++ b/references.bib
@@ -716,3 +716,92 @@ author = {Clara Mancini and Shaun Lawson and Oskar Juhlin},
 keywords = {Animal-Computer Interaction, Human-animal relations, Animal-centred design, More-than-human participatory research},
 abstract = {In this editorial to the IJHCS Special Issue on Animal-Computer Interaction (ACI), we provide an overview of the state-of-the-art in this emerging field, outlining the main scientific interests of its developing community, in a broader cultural context of evolving human-animal relations. We summarise the core aims proposed for the development of ACI as a discipline, discussing the challenges these pose and how ACI researchers are trying to address them. We then introduce the contributions to the Special Issue, showing how they illustrate some of the key issues that characterise the current state-of-the-art in ACI, and finally reflect on how the journey ahead towards developing an ACI discipline could be undertaken.}
 }
+
+@inproceedings{caine-sample-size:2016,
+author = {Caine, Kelly},
+title = {Local Standards for Sample Size at CHI},
+year = {2016},
+isbn = {9781450333627},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2858036.2858498},
+doi = {10.1145/2858036.2858498},
+abstract = {We describe the primary ways researchers can determine the size of a sample of research participants, present the benefits and drawbacks of each of those methods, and focus on improving one method that could be useful to the CHI community: local standards. To determine local standards for sample size within the CHI community, we conducted an analysis of all manuscripts published at CHI2014. We find that sample size for manuscripts published at CHI ranges from 1 -- 916,000 and the most common sample size is 12. We also find that sample size differs based on factors such as study setting and type of methodology employed. The outcome of this paper is an overview of the various ways sample size may be determined and an analysis of local standards for sample size within the CHI community. These contributions may be useful to researchers planning studies and reviewers evaluating the validity of results.},
+booktitle = {Proceedings of the 2016 CHI Conference on Human Factors in Computing Systems},
+pages = {981–992},
+numpages = {12},
+keywords = {N, evaluation, meta-HCI, methodology, number of participants, research methods, sample size},
+location = {San Jose, California, USA},
+series = {CHI '16}
+}
+
+@inproceedings{mohaddesi-pilot-studies:2020,
+author = {Mohaddesi, Omid and Harteveld, Casper},
+title = {The Importance of Pilot Studies for Gamified Research: Pre-Testing Gamettes to Study Supply Chain Decisions},
+year = {2020},
+isbn = {9781450375870},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3383668.3419889},
+doi = {10.1145/3383668.3419889},
+abstract = {Games and game-like methodologies are increasingly used as research environments, especially to conduct experiments to study decision-making. This growing trend in conducting gamified experiments is suggestive of the need for pilot studies and pre-testing the underlying games as well as experimental design. In this paper, we present an example of conducting a pilot study using Gamettes, a game-based methodology for collecting rich behavioral data on human decisions. Our results shed light on the efficacy of our experiment, how Gamettes' players interact with it in the way it is designed, and help identify issues that could bias the experiment and lead to a failed study. They further confirm the importance of conducting and reporting such pilot studies in gamified research.},
+booktitle = {Extended Abstracts of the 2020 Annual Symposium on Computer-Human Interaction in Play},
+pages = {316–320},
+numpages = {5},
+keywords = {gamettes, gamified research, pilot study, supply chain},
+location = {Virtual Event, Canada},
+series = {CHI PLAY '20}
+}
+
+@book{kahn1957dynamics,
+  title={The dynamics of interviewing; theory, technique, and cases},
+  author={Kahn, Robert L and Cannell, Charles F},
+  year={1957},
+  publisher={John Wiley \& Sons}
+}
+
+@phdthesis{reed2023imagining,
+  author = {Courtney Nicole Reed},
+  school = {Queen Mary University of London},
+  title = {Imagining \& Sensing: Understanding and Extending the Vocalist-Voice Relationship Through Biosignal Feedback},
+  year = {2023},
+  url = {https://qmro.qmul.ac.uk/xmlui/handle/123456789/89579}
+}
+
+@article{likert1932technique,
+  title={A technique for the measurement of attitudes.},
+  author={Likert, Rensis},
+  journal={Archives of Psychology},
+  year={1932}
+}
+
+@article{brooke-sus:1995,
+author = {Brooke, John},
+year = {1995},
+month = {11},
+pages = {},
+title = {SUS: A quick and dirty usability scale},
+volume = {189},
+journal = {Usability Eval. Ind.}
+}
+
+@online{uiuxtrend2024sus,
+    title={Measuring System Usability Scale (SUS)},
+    author={{UIUX Trend}},
+    organization = {{UIUX} Trend},
+    year={2024},
+    url={https://uiuxtrend.com/measuring-system-usability-scale-sus/},
+    note={Accessed: 2024-08-11}
+}
+
+@incollection{hart-nasa-tlx:1988,
+  title={Development of NASA-TLX (Task Load Index): Results of empirical and theoretical research},
+  author={Hart, Sandra G and Staveland, Lowell E},
+  booktitle={Advances in psychology},
+  volume={52},
+  pages={139--183},
+  year={1988},
+  publisher={Elsevier},
+  url={https://doi.org/10.1016/S0166-4115(08)62386-9},
+  doi={10.1016/S0166-4115(08)62386-9}
+}
