fix: change reference type from incollection to article for NASA-TLX entry

--- a/references.bib
+++ b/references.bib
@@ -794,7 +794,7 @@ journal = {Usability Eval. Ind.}
     note={Accessed: 2024-08-11}
 }
 
-@incollection{hart-nasa-tlx:1988,
+@article{hart-nasa-tlx:1988,
   title={Development of NASA-TLX (Task Load Index): Results of empirical and theoretical research},
   author={Hart, Sandra G and Staveland, Lowell E},
   booktitle={Advances in psychology},
