added creativity support index

--- a/references.bib
+++ b/references.bib
@@ -805,3 +805,41 @@ journal = {Usability Eval. Ind.}
   url={https://doi.org/10.1016/S0166-4115(08)62386-9},
   doi={10.1016/S0166-4115(08)62386-9}
 }
+
+@inproceedings{carroll-csi:2009,
+author = {Carroll, Erin A. and Latulipe, Celine},
+title = {The creativity support index},
+year = {2009},
+isbn = {9781605582474},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1520340.1520609},
+doi = {10.1145/1520340.1520609},
+abstract = {We present a draft survey tool called the Creativity Support Index (CSI). The CSI is similar to the NASA Task Load Index Survey but is designed specifically for evaluating creativity support tools, based on concepts and theories from creativity research.},
+booktitle = {CHI '09 Extended Abstracts on Human Factors in Computing Systems},
+pages = {4009--4014},
+numpages = {6},
+keywords = {standardized surveys, play, flow, expressiveness, engagement, creativity evaluation, creativity},
+location = {Boston, MA, USA},
+series = {CHI EA '09}
+}
+
+@article{cherry-csi:2014,
+author = {Cherry, Erin and Latulipe, Celine},
+title = {Quantifying the Creativity Support of Digital Tools through the Creativity Support Index},
+year = {2014},
+issue_date = {August 2014},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {21},
+number = {4},
+issn = {1073-0516},
+url = {https://doi.org/10.1145/2617588},
+doi = {10.1145/2617588},
+abstract = {Creativity support tools help people engage creatively with the world, but measuring how well a tool supports creativity is challenging since creativity is ill-defined. To this end, we developed the Creativity Support Index (CSI), which is a psychometric survey designed for evaluating the ability of a creativity support tool to assist a user engaged in creative work. The CSI measures six dimensions of creativity support: Exploration, Expressiveness, Immersion, Enjoyment, Results Worth Effort, and Collaboration. The CSI allows researchers to understand not just how well a tool supports creative work overall, but what aspects of creativity support may need attention. In this article, we present the CSI, along with scenarios for how it can be deployed in a variety of HCI research settings and how the CSI scores can help target design improvements. We also present the iterative, rigorous development and validation process used to create the CSI.},
+journal = {ACM Trans. Comput.-Hum. Interact.},
+month = jun,
+articleno = {21},
+numpages = {25},
+keywords = {surveys, psychometrics, evaluation, Creativity support tools}
+}
