--- a/references.bib
+++ b/references.bib
@@ -843,3 +843,21 @@ articleno = {21},
 numpages = {25},
 keywords = {surveys, psychometrics, evaluation, Creativity support tools}
 }
+
+@inproceedings{ljungblad-what-matters:2021,
+author = {Ljungblad, Sara and Man, Yemao and Bayta\c{s}, Mehmet Ayd\i{}n and Gamboa, Mafalda and Obaid, Mohammad and Fjeld, Morten},
+title = {What Matters in Professional Drone Pilots’ Practice? An&nbsp;Interview&nbsp;Study&nbsp;to Understand the Complexity of Their Work and Inform Human-Drone Interaction Research},
+year = {2021},
+isbn = {9781450380966},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3411764.3445737},
+doi = {10.1145/3411764.3445737},
+abstract = {Human-drone interaction is a growing topic of interest within HCI research. Researchers propose many innovative concepts for drone applications, but much of this research does not incorporate knowledge on existing applications already adopted by professionals. This limits the validity of said research. To address this limitation, we present our findings from an in-depth interview study with 10 professional drone pilots. Our participants were armed with significant experience and qualifications – pertinent to both drone operations and a set of applications covering diverse industries. Our findings have resulted in design recommendations that should inform both ends and means of human-drone interaction research. These include, but are not limited to: safety-related protocols, insights from domain-specific use cases, and relevant practices outside of hands-on flight.},
+booktitle = {Proceedings of the 2021 CHI Conference on Human Factors in Computing Systems},
+articleno = {159},
+numpages = {16},
+keywords = {quadcopters, professionals, pilots, piloting, interview study, Drones},
+location = {Yokohama, Japan},
+series = {CHI '21}
+}
