update with analytical frameworks doneish

--- a/references.bib
+++ b/references.bib
@@ -861,3 +861,78 @@ keywords = {quadcopters, professionals, pilots, piloting, interview study, Drone
 location = {Yokohama, Japan},
 series = {CHI '21}
 }
+
+@inproceedings{porcheron-voice-interfaces:2018,
+author = {Porcheron, Martin and Fischer, Joel E. and Reeves, Stuart and Sharples, Sarah},
+title = {Voice Interfaces in Everyday Life},
+year = {2018},
+isbn = {9781450356206},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3173574.3174214},
+doi = {10.1145/3173574.3174214},
+abstract = {Voice User Interfaces (VUIs) are becoming ubiquitously available, being embedded both into everyday mobility via smartphones, and into the life of the home via 'assistant' devices. Yet, exactly how users of such devices practically thread that use into their everyday social interactions remains underexplored. By collecting and studying audio data from month-long deployments of the Amazon Echo in participants' homes-informed by ethnomethodology and conversation analysis-our study documents the methodical practices of VUI users, and how that use is accomplished in the complex social life of the home. Data we present shows how the device is made accountable to and embedded into conversational settings like family dinners where various simultaneous activities are being achieved. We discuss how the VUI is finely coordinated with the sequential organisation of talk. Finally, we locate implications for the accountability of VUI interaction, request and response design, and raise conceptual challenges to the notion of designing 'conversational' interfaces.},
+booktitle = {Proceedings of the 2018 CHI Conference on Human Factors in Computing Systems},
+pages = {1–12},
+numpages = {12},
+keywords = {amazon echo, collocated interaction, conversation analysis, conversational agent, conversational user interface, ethnomethodology, intelligent personal assistants},
+location = {Montreal QC, Canada},
+series = {CHI '18}
+}
+
+@article{jordan-interaction-analysis:1995,
+author = {Brigitte Jordan and Austin Henderson},
+title = {Interaction Analysis: Foundations and Practice},
+journal = {Journal of the Learning Sciences},
+volume = {4},
+number = {1},
+pages = {39--103},
+year = {1995},
+publisher = {Routledge},
+doi = {10.1207/s15327809jls0401\_2},
+url = {https://doi.org/10.1207/s15327809jls0401_2},
+}
+
+@article{klein-sociotechnical:2014,
+  title={What do we actually mean by `sociotechnical'? On values, boundaries and the problems of language},
+  author={Klein, Lisl},
+  journal={Applied ergonomics},
+  volume={45},
+  number={2},
+  pages={137--142},
+  year={2014},
+  publisher={Elsevier}
+}
+
+
+@book{glaser-strauss-grounded-theory:1967,
+  author = {Galser, B. G. and Strauss, A.},
+  publisher = {Aldine,  London},
+  title = {Discovery of Grounded Theory},
+  year = {1967}
+}
+
+@book{corbin-strauss-grounded-theory:2014,
+  author = {Corbin, J. M. and Strauss, A.},
+  publisher = {SAGE Publications},
+  title = {Basics of Qualitative Research: Techniques and Procedures for Developing Grounded Theory},
+  year = {2014}
+}
+
+@inproceedings{alharthi-idle-games:2018,
+author = {Alharthi, Sultan A. and Alsaedi, Olaa and Toups Dugas, Phoebe O. and Tanenbaum, Theresa Jean and Hammer, Jessica},
+title = {Playing to Wait: A Taxonomy of Idle Games},
+year = {2018},
+isbn = {9781450356206},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3173574.3174195},
+doi = {10.1145/3173574.3174195},
+abstract = {Idle games are a recent minimalist gaming phenomenon in which the game is left running with little player interaction. We deepen understanding of idle games and their characteristics by developing a taxonomy and identifying game features. This paper examines 66 idle games using a grounded theory approach to analyze play, game mechanics, rewards, interactivity, progress rate, and user interface. To establish a clearly bounded definition of idle games, we analyzed 10 non-idle games with the same approach. We discuss how idle games move players from playing to planning, how they question dominant assumptions about gameplay, and their unusual use of resources such as player attention and computer cycles. Our work illuminates opportunities for the design of idle games, suggests design implications, and provides a framework for researchers to clearly articulate questions about this genre.},
+booktitle = {Proceedings of the 2018 CHI Conference on Human Factors in Computing Systems},
+pages = {1–15},
+numpages = {15},
+keywords = {waiting, taxonomy, playing, planning, incremental games, idle games, grounded theory, game design, clicker games},
+location = {Montreal QC, Canada},
+series = {CHI '18}
+}
