--- a/references.bib
+++ b/references.bib
@@ -936,3 +936,37 @@ keywords = {waiting, taxonomy, playing, planning, incremental games, idle games,
 location = {Montreal QC, Canada},
 series = {CHI '18}
 }
+
+@article{braun-reflexive-thematic-analysis:2019,
+  title={Reflecting on reflexive thematic analysis},
+  author={Braun, Virginia and Clarke, Victoria},
+  journal={Qualitative research in sport, exercise and health},
+  volume={11},
+  number={4},
+  pages={589--597},
+  year={2019},
+  publisher={Taylor \& Francis},
+  url={https://doi.org/10.1080/2159676X.2019.1628806},
+  doi={10.1080/2159676X.2019.1628806}
+}
+
+@article{braun-thematic-analysis:2006,
+  title={Using thematic analysis in psychology},
+  author={Braun, Virginia and Clarke, Victoria},
+  journal={Qualitative Research in Psychology},
+  volume={3},
+  number={2},
+  pages={77--101},
+  year={2006},
+  publisher={Taylor \& Francis},
+  url={https://doi.org/10.1191/1478088706qp063oa},
+  doi={10.1191/1478088706qp063oa}
+}
+
+
+@book{braun-thematic-analysis:2022,
+  title={Thematic Analysis: A Practical Guide},
+  author={Braun, Virginia and Clarke, Victoria},
+  publisher={Sage Publications},
+  year={2022},
+}
