reflow the lectures

--- a/references.bib
+++ b/references.bib
@@ -937,6 +937,8 @@ location = {Montreal QC, Canada},
 series = {CHI '18}
 }
 
+% thematic analysis
+
 @article{braun-reflexive-thematic-analysis:2019,
   title={Reflecting on reflexive thematic analysis},
   author={Braun, Virginia and Clarke, Victoria},
@@ -969,4 +971,16 @@ series = {CHI '18}
   author={Braun, Virginia and Clarke, Victoria},
   publisher={Sage Publications},
   year={2022},
+}
+
+@article{morriss-themes-do-not-emerge:2024,
+  author = {Lisa Morriss},
+  title ={Themes do not emerge. An editor's reflections on the use of Braun and Clarke's thematic analysis},
+  journal = {Qualitative Social Work},
+  volume = {23},
+  number = {5},
+  pages = {745-749},
+  year = {2024},
+  doi = {10.1177/14733250241277355},
+  url = {https://doi.org/10.1177/14733250241277355},
 }
