better hack at the week 6 lecture

--- a/references.bib
+++ b/references.bib
@@ -984,3 +984,60 @@ series = {CHI '18}
   doi = {10.1177/14733250241277355},
   url = {https://doi.org/10.1177/14733250241277355},
 }
+
+@book{lazar-research-methods:2017,
+  title={Research methods in human-computer interaction},
+  author={Lazar, Jonathan and Feng, Jinjuan Heidi and Hochheiser, Harry},
+  year={2017},
+  publisher={Morgan Kaufmann}
+}
+
+@inproceedings{rode-reflexivity-digital-anthropology:2011,
+author = {Rode, Jennifer A.},
+title = {Reflexivity in digital anthropology},
+year = {2011},
+isbn = {9781450302289},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi-org.virtual.anu.edu.au/10.1145/1978942.1978961},
+doi = {10.1145/1978942.1978961},
+abstract = {There are a variety of forms of ethnography inside and outside HCI each with valid complementary contributions. This paper looks at the practices of digital anthropology and how it contributes to reflexive design in HCI. The paper overviews key aspects its use in HCI, as well as in the anthropological approach. In doing so it relates these practices to participatory design and the socio-technical gap, and the ways ethnography can address them.},
+booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+pages = {123–132},
+numpages = {10},
+keywords = {rapport, participant-observation, iterative, ethnography},
+location = {Vancouver, BC, Canada},
+series = {CHI '11}
+}
+
+@article{olmos-vega-reflexivity-qualitative-research:2023,
+author = {Francisco M. Olmos-Vega and Renée E. Stalmeijer and Lara Varpio and Renate Kahlke},
+title = {A practical guide to reflexivity in qualitative research: AMEE Guide No. 149},
+journal = {Medical Teacher},
+volume = {45},
+number = {3},
+pages = {241--251},
+year = {2023},
+publisher = {Taylor \& Francis},
+doi = {10.1080/0142159X.2022.2057287},
+}
+
+@article{liang-tensions-hci-marginalized:2021,
+author = {Liang, Calvin A. and Munson, Sean A. and Kientz, Julie A.},
+title = {Embracing Four Tensions in Human-Computer Interaction Research with Marginalized People},
+year = {2021},
+issue_date = {April 2021},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {28},
+number = {2},
+issn = {1073-0516},
+url = {https://doi-org.virtual.anu.edu.au/10.1145/3443686},
+doi = {10.1145/3443686},
+abstract = {Human-computer interaction has a long history of working with marginalized people. We sought to understand how HCI researchers navigate work that engages with marginalized people and considerations researchers might work through to expand benefits and mitigate potential harms. In total, 24 HCI researchers, located primarily in the United States, participated in an interview, survey, or both. Through a reflexive thematic analysis, we identified four tensions—exploitation, membership, disclosure, and allyship. We explore the complexity involved in each, demonstrating that an equitable endpoint may not be possible, but this work is still worth pursuing when researchers make certain considerations. We emphasize that researchers who work with marginalized people should account for each tension in their research approaches to move forward. Finally, we propose an allyship-oriented approach to research that draws inspiration from discourse occurring in tangential fields and activist spaces and pushes the field into a new paradigm of research with marginalized people.},
+journal = {ACM Trans. Comput.-Hum. Interact.},
+month = apr,
+articleno = {14},
+numpages = {47},
+keywords = {Marginalized people, allyship, tensions, disclosure, exploitation, membership}
+}
