--- a/references.bib
+++ b/references.bib
@@ -1041,3 +1041,52 @@ articleno = {14},
 numpages = {47},
 keywords = {Marginalized people, allyship, tensions, disclosure, exploitation, membership}
 }
+
+@book{barad-meeting-universe:2007,
+  title={Meeting the universe halfway: Quantum physics and the entanglement of matter and meaning},
+  author={Barad, Karen},
+  year={2007},
+  publisher={duke university Press}
+}
+
+@article{decruir-gunby-codebook:2011,
+author = {Jessica T. DeCuir-Gunby and Patricia L. Marshall and Allison W. McCulloch},
+title ={Developing and Using a Codebook for the Analysis of Interview Data: An Example from a Professional Development Research Project},
+journal = {Field Methods},
+volume = {23},
+number = {2},
+pages = {136-155},
+year = {2011},
+doi = {10.1177/1525822X10388468},
+URL = {https://doi.org/10.1177/1525822X10388468},
+eprint = {https://doi.org/10.1177/1525822X10388468},
+abstract = {This article gives specific steps on how to create a codebook for coding interview data. The authors examine the development of theory- and data-driven codes through the discussion of a professional development (PD) research project. They also discuss how to train others to code using the codebook, including how to establish reliability. The authors end with practical suggestions from their experiences in creating a codebook.}
+}
+
+@book{terry-thematic-analysis:2021,
+  title={Essentials of thematic analysis.},
+  author={Terry, Gareth and Hayfield, Nikki},
+  year={2021},
+  publisher={American Psychological Association}
+}
+
+@article{given-in-vivo-coding:2008,
+  title={In vivo coding},
+  author={Given, Lisa M},
+  journal={The SAGE encyclopedia of qualitative research methods},
+  volume={2},
+  year={2008},
+  publisher={SAGE Publications, Inc. Thousand Oaks, CA, USA},
+  url={https://www-doi-org.virtual.anu.edu.au/10.4135/9781412963909.n240}
+}
+
+@article{piggott-preceptor-engagement:2015,
+  title={Preceptor engagement in distributed medical school campuses},
+  author={Piggott, Thomas and Morris, Cathy and Lee-Poy, Michael},
+  journal={Canadian medical education journal},
+  volume={6},
+  number={2},
+  pages={e20},
+  year={2015},
+  url={https://pubmed.ncbi.nlm.nih.gov/27004073}
+}
