--- a/references.bib
+++ b/references.bib
@@ -1090,3 +1090,16 @@ abstract = {This article gives specific steps on how to create a codebook for co
   year={2015},
   url={https://pubmed.ncbi.nlm.nih.gov/27004073}
 }
+
+@article{byrne-worked-thematic-analysis:2022,
+  title={A worked example of Braun and Clarke’s approach to reflexive thematic analysis},
+  author={Byrne, David},
+  journal={Quality \& quantity},
+  volume={56},
+  number={3},
+  pages={1391--1412},
+  year={2022},
+  publisher={Springer},
+  url={https://link.springer.com/article/10.1007/s11135-021-01182-y},
+  doi={10.1007/s11135-021-01182-y}
+}
