--- a/references.bib
+++ b/references.bib
@@ -1103,3 +1103,47 @@ abstract = {This article gives specific steps on how to create a codebook for co
   url={https://link.springer.com/article/10.1007/s11135-021-01182-y},
   doi={10.1007/s11135-021-01182-y}
 }
+
+@misc{national-statement-ethical-conduct:2025,
+  title={The National Statement on Ethical Conduct in Human Research (2025)},
+  author={{National Health and Medical Research Council (NHMRC)} and {Australian Research Council (ARC)} and {Universities Australia}},
+  year={2025},
+  url={https://www.nhmrc.gov.au/about-us/publications/national-statement-ethical-conduct-human-research-2025},
+}
+
+@inproceedings{brown-ethical-hci:2016,
+author = {Brown, Barry and Weilenmann, Alexandra and McMillan, Donald and Lampinen, Airi},
+title = {Five Provocations for Ethical HCI Research},
+year = {2016},
+isbn = {9781450333627},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2858036.2858313},
+doi = {10.1145/2858036.2858313},
+abstract = {We present five provocations for ethics, and ethical research, in HCI. We discuss, in turn, informed consent, the researcher-participant power differential, presentation of data in publications, the role of ethical review boards, and, lastly, corporate-facilitated projects. By pointing to unintended consequences of regulation and oversimplifications of unresolvable moral conflicts, we propose these provocations not as guidelines or recommendations but as instruments for challenging our views on what it means to do ethical research in HCI. We then suggest an alternative grounded in the sensitivities of those being studied and based on everyday practice and judgement, rather than one driven by bureaucratic, legal, or philosophical concerns. In conclusion, we call for a wider and more practical discussion on ethics within the community, and suggest that we should be more supportive of low-risk ethical experimentation to further the field.},
+booktitle = {Proceedings of the 2016 CHI Conference on Human Factors in Computing Systems},
+pages = {852–863},
+numpages = {12},
+keywords = {research practice, human trials, ethics},
+location = {San Jose, California, USA},
+series = {CHI '16}
+}
+
+@article{benford-ethical-implications:2015,
+author = {Benford, Steve and Greenhalgh, Chris and Anderson, Bob and Jacobs, Rachel and Golembewski, Mike and Jirotka, Marina and Stahl, Bernd Carsten and Timmermans, Job and Giannachi, Gabriella and Adams, Matt and Farr, Ju Row and Tandavanitj, Nick and Jennings, Kirsty},
+title = {The Ethical Implications of HCI's Turn to the Cultural},
+year = {2015},
+issue_date = {October 2015},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {22},
+number = {5},
+issn = {1073-0516},
+url = {https://doi.org/10.1145/2775107},
+doi = {10.1145/2775107},
+abstract = {We explore the ethical implications of HCI's turn to the 'cultural'. This is motivated by an awareness of how cultural applications, in our case interactive performances, raise ethical issues that may challenge established research ethics processes. We review research ethics, HCI's engagement with ethics and the ethics of theatrical performance. Following an approach grounded in Responsible Research Innovation, we present the findings from a workshop in which artists, curators, commissioners, and researchers explored ethical challenges revealed by four case studies. We identify six ethical challenges for HCI's engagement with cultural applications: transgression, boundaries, consent, withdrawal, data, and integrity. We discuss two broader implications of these: managing tensions between multiple overlapping ethical frames; and the importance of managing ethical challenges during and after an experience as well as beforehand. Finally, we discuss how our findings extend previous discussions of Value Sensitive Design in HCI.},
+journal = {ACM Trans. Comput.-Hum. Interact.},
+month = aug,
+articleno = {24},
+numpages = {37},
+}
