--- a/references.bib
+++ b/references.bib
@@ -1147,3 +1147,33 @@ month = aug,
 articleno = {24},
 numpages = {37},
 }
+@inproceedings{speicher2019mixed,
+  title={What is mixed reality?},
+  author={Speicher, Maximilian and Hall, Brian D and Nebeling, Michael},
+  booktitle={Proceedings of the 2019 CHI conference on human factors in computing systems},
+  pages={1--15},
+  year={2019}
+}
+@book{billinghurst-2015-ar-survey,
+  author={Billinghurst, Mark and Clark, Adrian and Lee, Gun},
+  booktitle={A Survey of Augmented Reality},
+  year={2015},
+  volume={},
+  number={},
+  pages={},
+  abstract={A Survey of Augmented Reality summarizes almost fifty years of research and development in the field of Augmented Reality (AR). From early research in the 1960's until widespread availability by the 2010's, there has been steady progress towards the goal of being able to seamlessly combine real and virtual worlds. This monograph provides an overview of the common definitions of AR, and shows how AR fits into taxonomies of other related technologies. A history of important milestones in Augmented Reality is followed by sections on the key enabling technologies of tracking, display, and input devices. The author also review design guidelines and provide some examples of successful AR applications. The work concludes with a summary of directions for future work, and a review of some of the areas that are currently being researched. A Survey of Augmented Reality is an invaluable resource for researchers and practitioners. It provides an ideal starting point for those who want an overview of the technology and to undertake research and development in the field.},
+  keywords={Augmented reality},
+  doi={10.1561/1100000049},
+  ISSN={},
+  publisher={now},
+  isbn={9781601989215},
+  url={https://ieeexplore.ieee.org/document/8186839}}
+  @mastersthesis{greenwold-2003-spatial-computing,
+  author       = {Greenwold, Simon},
+  title        = {Spatial Computing},
+  school       = {School of Architecture and Planning, Massachusetts Institute of Technology},
+  year         = {2003},
+  address      = {Cambridge, Massachusetts, The United States}, 
+  month        = {June},
+  note         = {Master of Science in Media Arts and Sciences} 
+}
