--- a/references.bib
+++ b/references.bib
@@ -1177,3 +1177,23 @@ numpages = {37},
   month        = {June},
   note         = {Master of Science in Media Arts and Sciences} 
 }
+@article{rogers1996search,
+  title={In search of clickable Dons: Learning about HCI Through Interacting with Norman's CD-ROM},
+  author={Rogers, Yvonne and Aldrich, Frances},
+  journal={ACM SIGCHI Bulletin},
+  volume={28},
+  number={3},
+  pages={44--47},
+  year={1996},
+  publisher={ACM New York, NY, USA}
+}
+@article{mullet1996designing,
+  title={Designing visual interfaces},
+  author={Mullet, Kevin and Sano, Darrell},
+  journal={Acm Sigchi Bulletin},
+  volume={28},
+  number={2},
+  pages={82--83},
+  year={1996},
+  publisher={ACM New York, NY, USA}
+}
