resolve merge conflict!

--- a/references.bib
+++ b/references.bib
@@ -1199,3 +1199,39 @@
   year      = {1996},
   publisher = {ACM New York, NY, USA}
 }
+@article{krug2014don,
+  title={Don’t make me think, Revisited},
+  author={Krug, Steve and others},
+  journal={A Common Sense Approach to Web and Mobile Usability},
+  volume={3},
+  year={2014}
+}
+@book{veen2000art,
+  title={The art and science of Web design},
+  author={Veen, Jeffrey},
+  year={2000},
+  publisher={Pearson Education}
+}
+@article{wang2014ocarina,
+  title={Ocarina: Designing the iPhone's magic flute},
+  author={Wang, Ge},
+  journal={Computer Music Journal},
+  volume={38},
+  number={2},
+  pages={8--21},
+  year={2014},
+  publisher={MIT Press}
+}
+@misc{babich2018mobileux,
+  author       = {Babich, Nick},
+  title        = {The Do's and Don'ts of Mobile UX Design},
+  year         = {2018},
+  howpublished = {\url{https://theblog.adobe.com/10-dos-donts-mobile-ux-design}},
+  note         = {Accessed: 2025-09-11}
+}
+@book{cooper2014face,
+  title={About face: the essentials of interaction design},
+  author={Cooper, Alan and Reimann, Robert and Cronin, David and Noessel, Christopher},
+  year={2014},
+  publisher={John Wiley \& Sons}
+}
