--- a/references.bib
+++ b/references.bib
@@ -1148,6 +1148,7 @@
   articleno  = {24},
   numpages   = {37}
 }
+% yichen has a different reference style.
 @inproceedings{speicher2019mixed,
   title     = {What is mixed reality?},
   author    = {Speicher, Maximilian and Hall, Brian D and Nebeling, Michael},
