--- a/references.bib
+++ b/references.bib
@@ -1236,3 +1236,9 @@
   year={2014},
   publisher={John Wiley \& Sons}
 }
+@book{cohen2004voice,
+  title={Voice user interface design},
+  author={Cohen, Michael Harris and Giangola, James P and Balogh, Jennifer},
+  year={2004},
+  publisher={Addison-Wesley Professional}
+}
