--- a/references.bib
+++ b/references.bib
@@ -1242,3 +1242,67 @@
   year={2004},
   publisher={Addison-Wesley Professional}
 }
+@article{rossiter2018past,
+  title={Past, present \& future of information technology in pedometrics},
+  author={Rossiter, David G},
+  journal={Geoderma},
+  volume={324},
+  pages={131--137},
+  year={2018},
+  publisher={Elsevier}
+}
+@inproceedings{spelmezan2009tactile,
+  title={Tactile motion instructions for physical activities},
+  author={Spelmezan, Daniel and Jacobs, Mareike and Hilgers, Anke and Borchers, Jan},
+  booktitle={Proceedings of the SIGCHI conference on human factors in computing systems},
+  pages={2243--2252},
+  year={2009}
+}
+@inproceedings{bouchet2004icare,
+  title={ICARE: a component-based approach for the design and development of multimodal interfaces},
+  author={Bouchet, Jullien and Nigay, Laurence},
+  booktitle={CHI'04 extended abstracts on Human factors in computing systems},
+  pages={1325--1328},
+  year={2004}
+}
+@incollection{dumas2009multimodal,
+  title={Multimodal interfaces: A survey of principles, models and frameworks},
+  author={Dumas, Bruno and Lalanne, Denis and Oviatt, Sharon},
+  booktitle={Human machine interaction: Research results of the mmi program},
+  pages={3--26},
+  year={2009},
+  publisher={Springer}
+}
+@book{oviatt2017handbook,
+  title={The handbook of multimodal-multisensor interfaces, volume 1: Foundations, user modeling, and common modality combinations},
+  author={Oviatt, Sharon and Schuller, Bj{\"o}rn and Cohen, Philip and Sonntag, Daniel and Potamianos, Gerasimos},
+  year={2017},
+  publisher={Morgan \& Claypool}
+}
+@article{deng2004challenges,
+  title={Challenges in adopting speech recognition},
+  author={Deng, Li and Huang, Xuedong},
+  journal={Communications of the ACM},
+  volume={47},
+  number={1},
+  pages={69--75},
+  year={2004},
+  publisher={ACM New York, NY, USA}
+}
+@incollection{jorda2010reactable,
+  title={The reactable: tangible and tabletop music performance},
+  author={Jord{\`a}, Sergi},
+  booktitle={CHI'10 Extended Abstracts on Human Factors in Computing Systems},
+  pages={2989--2994},
+  year={2010}
+}
+@article{clegg2020community,
+  title={Community-driven informal adult environmental learning: Using theory as a lens to identify steps toward concientizaci{\'o}n},
+  author={Clegg, Tamara and Boston, Carol and Preece, Jennifer and Warrick, Elizabeth and Pauw, Daniel and Cameron, Jacqueline},
+  journal={The Journal of Environmental Education},
+  volume={51},
+  number={1},
+  pages={55--71},
+  year={2020},
+  publisher={Taylor \& Francis}
+}
